Closed Bug 34176 Opened 24 years ago Closed 24 years ago

Text in articles does not wrap correctly (table-layout: fixed)

Categories

(Core :: Layout: Tables, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla0.8

People

(Reporter: chutzpah, Assigned: karnaze)

References

()

Details

(Keywords: testcase)

Attachments

(4 files)

The text on http://www.geeknews.net does not wrap at the edge of the screen, it
goes off to the side of the scree fazr enough that it cannot even be all seen by
scrolling over. I am not sure whether this is a bug in the table engine, but I'm
guessing it probably is.
i see this too in build ID 2000033113
When the page has finished loading and you move the scrollbar, it immediately
resize the right main table (grey backgr.), and the last character in each line
is half hidden - one can't scroll to see it.
Attached file Simplified testcase
Marking bug confirmed.
The attached testcase shows a text that does not wrap at the end of the
line, and for which no horizontal scrollbar is available. As a result,
the hidden text is unaccessible.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: testcase
I looked at this page in NC4.7 - it's worse than it looks: There's supposed to
be a third table on that page, about the size of the left table. That one
completely vanishes since what is really the middle table takes all space on the
right side ++
Adding 'table-layout: fixed' to summary for searching purposes
Summary: Text in articles does not wrap correctly → Text in articles does not wrap correctly (table-layout: fixed)
*** Bug 35223 has been marked as a duplicate of this bug. ***
Status: NEW → ASSIGNED
Target Milestone: --- → M17
The problem dosn't seem to be that the text is wrapped wrong but rather that the
outer table dosn't expand to contain the inner table.

The outer table seems to check the width of the inner table before the inner
table gets width is calculated.

Simplifyed the testcase a bit further and added borders to illuminate the problem...
*** Bug 42207 has been marked as a duplicate of this bug. ***
Attached patch patchSplinter Review
The proposed patch fixes both testcases and the duplicates.
the ideas behind are:
transmit the minimum table size correctly.
don't compute remaining width and overallocation if the table size is unconstrained
in case of overspecified percent columns reduce them proportionaly.

The patch breakes the table regression tests!
especially 10269-1 and 10269-2 due to the correct implementation of
overAllocated, further 7243, due to the overAllocated percent reduction.

Keywords: patch, review
Target Milestone: M17 → mozilla0.8
*** Bug 27244 has been marked as a duplicate of this bug. ***
*** Bug 53170 has been marked as a duplicate of this bug. ***
r=karnaze, assumming the regression tests are ok. At some point the fixed layout
strategy needs to share code with the basic strategy (and this fix will be
moot). Until that happens however, this fix should be checked in.
Is it worth taking some time to factor the code now?
My impression is that Chris has now more important items in his buglist (that 
was my reason to fix it), so I would propose to check it in, as it fixes the 
prominent geeknews.net. I would volunter to finish and to test Chris new code. 
And once this is done we could change. Otherwise my pessimistic estimate is, 
that we have the problems for another month (or 2??) and who knows when the next 
PDT phase will start....
ok, sr=waterson
The patch is in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
QA contact update
QA Contact: chrisd → amar
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: