bug 34176 - correct fixed table layout over allocated cols. sr=waterson, r=karnaze.